<resources>
    <string name="app_name">Moodify</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo_description">Logo Moodify</string>
    <string name="banner_description">Banner Moodify</string>
<!--    <string name="welcome_to_moodify">Welcome to</string>-->
<!--    <string name="description_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>-->
<!--    <string name="lets_go">Let&apos;s go!</string>-->


    <string name="welcome_to_moodify">Welcome to</string>
    <string name="lorem_ipsum_description">Take Control of Your Mental Health with\"Moodify\"...</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="login">Login</string>
    <string name="email_hint">Email account</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_prompt">Haven\'t registered yet?</string>
    <string name="register">Register</string>
    <string name="back_button_description">Back button</string>

    <string name="register_title">Register</string>
    <string name="name_hint">Name</string>
    <string name="agreement_text">By signing up, you’re agree to our <font color='#4C80C1'>Terms &amp; Conditions</font> and <font color='#4C80C1'>Privacy Policy</font>.</string>
    <string name="register_prompt_">Already have an account?</string>
    <string name="login_link">Login</string>



    <string name="back_button_description_profile">Go back to the previous screen</string>
    <string name="profile_image_description">User profile picture</string>
    <string name="name">Name</string>
    <string name="name_icon_description">Icon representing user\'s name</string>
    <string name="gender">Gender</string>
    <string name="gender_icon_description">Icon representing user\'s gender</string>
    <string name="nations">Nations</string>
    <string name="nation_icon_description">Icon representing user\'s nation</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_journaling">Create Journaling</string>
    <string name="submenu_description">Submenu</string>
    <string name="date_text">11 November 2024 19.52</string>
    <string name="done">Done</string>
    <string name="done_icon_description">Done Icon</string>
    <string name="start_typing">Start typing...</string>

    <string name="already_have_account">Already have an account? </string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_password_length">Password must be at least 8 characters</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_name_short">Name must be at least 3 characters long</string>
    <string name="error_password_uppercase">Password harus memiliki minimal 1 huruf besar.</string>
    <string name="error_password_symbol">Password harus memiliki minimal 1 simbol.</string>

    <!-- Buttons -->
    <string name="register_button">Register</string>
    <string name="back_arrow">Back</string>

    <!-- Input Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email Account</string>
    <string name="hint_password">Password</string>

    <!-- Descriptions -->
    <string name="banner_image">Register banner</string>
    <string name="app_logo">App logo</string>
    <string name="name_icon">Name icon</string>
    <string name="email_icon">Email icon</string>
    <string name="password_icon">Password icon</string>

    <!-- Terms and Privacy -->
    <string name="terms_and_conditions">By signing up, you\'re agree to our Terms &amp; Conditions and Privacy Policy</string>


    <!-- Settings -->
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="themes">Themes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="notification_text">Notification for daily reminder</string>

    <!-- Menu Button -->
    <string name="home_title">Home</string>
    <string name="relax_title">Relaxation</string>
    <string name="create_title">Add Journal</string>
    <string name="mood_title">Mood Track</string>
    <string name="journal_title">Journal</string>
    <string name="profile_title">Profile</string>
    <string name="setting_title">Settings</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="logout_title">Logout</string>

    <!--Pop Up Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_logout">Logout</string>

    <!-- Favorite Arcticles -->
    <string name="favorite_articles">Bookmark</string>

    <!-- Notifications -->
    <string name="notification_title">DAILY REMINDER</string>
    <string name="notification_message">Don\'t forget to make a journal</string>
    <string name="notification_sub_message">There’s Fire 3 blocks away from you. Try alternative route.</string>


    <!-- DetailArticle -->
    <string name="header_title">Why Brain Smart?</string>
    <string name="back_button_description_detail">Back Button</string>
    <string name="author_name">James Arthur</string>
    <string name="publication_date">Published 08 Aug 2024</string>
    <string name="article_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porttitor vestibulum tortor at sagittis. Nulla vel porta lectus. Maecenas mollis id massa a volutpat. Etiam diam ex, molestie id ex laoreet, pellentesque semper enim. Aliquam luctus tempus gravida. Nullam tellus neque, tincidunt ut tincidunt id, placerat vitae purus. In semper risus non malesuada auctor. Morbi rutrum nec odio ut lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed viverra quis nunc non rhoncus. Duis tempus, leo </string>


    <!-- Article Item -->
    <string name="article_description">Research explores factors that influence cognitive aging, highlighting exercise, avoiding stress...</string>

    <!-- Home -->
    <string name="greeting">Hello, User</string>
    <string name="date">FRIDAY, NOVEMBER 08</string>
    <string name="newest_article">Newest Article</string>

    <!-- Relaxation -->
    <string name="play_pause_description">Play or pause music</string>
    <string name="slider_music_description">Adjust music progress</string>
    <string name="info_icon_description">Information icon</string>
    <string name="title_song">Natural songs</string>
    <string name="title_instructor">Take a Breath</string>
    <string name="time_instructor">15 S</string>
    <string name="start_time">2:25</string>
    <string name="end_time">4:02</string>
    <string name="relaxation_stopped">Relaxation Stopped</string>

    <string name="description_text">Wellcome to MOODIFY, Moodify lets you track your emotions and identify mood triggers. </string>

    <!-- Profile -->
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="nation_options">
        <item>USA</item>
        <item>Canada</item>
        <item>Indonesia</item>
        <item>Other</item>
    </string-array>
    <string name="enter_name">John Sins</string>
    <string name="change_photo">Change Photo</string>
    <string name="name_placeholder">Enter your name</string>
    <string name="error_profile_name_short">Name must be at least 4 characters long</string>

    <string name="lost_connection_image">Image indicating no internet connection</string>
    <string name="no_connection_message">No Connection. Please Try Again Later.</string>
    <string name="no_journal_message">No journal found for the selected date.</string>

    <string name="text_date">11 November 2024 19:52</string>
    <string name="text_done">Done ✓</string>
    <string name="input_hint">Start typing...</string>

    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_notification_channel_name">General Notifications</string>
    <string name="default_notification_channel_description">All notifications</string>
</resources>

