<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.frontend_moodify.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/bookmark_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_title"
        app:showAsAction="never"/>
</menu>