<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

<!--    <fragment-->
<!--        android:id="@+id/FirstFragment"-->
<!--        android:name="com.example.frontend_moodify.FirstFragment"-->
<!--        android:label="@string/first_fragment_label"-->
<!--        tools:layout="@layout/fragment_first">-->
<!--    </fragment>-->
<!--    <fragment-->
<!--        android:id="@+id/SecondFragment"-->
<!--        android:name="com.example.frontend_moodify.SecondFragment"-->
<!--        android:label="@string/second_fragment_label"-->
<!--        tools:layout="@layout/fragment_second">-->
<!--    </fragment>-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.frontend_moodify.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/navigation_relaxation"
        android:name="com.example.frontend_moodify.RelaxationFragment"
        android:label="@string/relax_title"
        tools:layout="@layout/fragment_relaxation">
    </fragment>
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.frontend_moodify.CreateJournalFragment"
        android:label="@string/create_title"
        tools:layout="@layout/fragment_create_journal">
    </fragment>
</navigation>