<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_landing_light"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".presentation.ui.splash.LandingPageActivity">

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/welcome_to_moodify"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_regular" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo_landing" />
    </LinearLayout>



    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="350dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/banner_description"
        android:src="@drawable/banner_landing"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="16:14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintBottom_toTopOf="@id/descriptionText" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:paddingStart="0dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/description_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerImage" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/letsGoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="12dp"
            android:text="@string/lets_go"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/registerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_prompt"
                android:textColor="@color/light_blue"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
